--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,12 +27,12 @@
         android:layout_marginTop="119dp">
 
     </ListView>
-    <!--<EditText
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="congacon"
         android:id="@+id/txtText">
 
-    </EditText>-->
+    </EditText>
 
 </RelativeLayout>
