--- a/app/src/main/res/layout/cartview.xml
+++ b/app/src/main/res/layout/cartview.xml
@@ -6,14 +6,13 @@
 
     <ImageView
         android:id="@+id/imageView_cart"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:scaleType="centerCrop"
-         />
+        android:layout_width="98dp"
+        android:layout_height="94dp"
+        android:scaleType="centerCrop" />
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="96dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
         android:orientation="vertical"
@@ -25,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Product Name"
+            android:layout_margin="5dp"
             android:textColor="@android:color/black"
             android:textSize="18sp" />
 
@@ -33,16 +33,42 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Price"
+            android:layout_margin="5dp"
             android:textColor="@android:color/black"
             android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/textView_quantity"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Quantity"
-            android:textColor="@android:color/black"
-            android:textSize="14sp" />
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/btnMinus"
+                android:layout_width="41dp"
+                android:layout_height="wrap_content"
+                android:text="-">
+
+            </Button>
+            <TextView
+                android:id="@+id/textView_quantity"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Quantity"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layoutDirection="rtl"
+                android:textColor="@android:color/black"
+                android:textSize="14sp" />
+            <Button
+                android:id="@+id/btnAdd"
+                android:layout_width="41dp"
+                android:layout_height="wrap_content"
+                android:text="+">
+
+            </Button>
+
+        </LinearLayout>
+
+
 
     </LinearLayout>
 
