--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -2,5 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="15dp" />
-    <solid android:color="#E6C6C6" />
+    <solid android:color="#ee9ca7" />
+    <gradient
+        android:type="linear"
+        android:startColor="#a1c4fd "
+        android:endColor="#c2e9fb"
+        android:angle="0" />
 </shape>
