--- a/app/src/main/res/layout/activity_cart_page.xml
+++ b/app/src/main/res/layout/activity_cart_page.xml
@@ -42,6 +42,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Thanh toán ngay"
+            android:textColor="#FA275A"
             ></Button>
         <!-- Add your views here, such as a TextView to display the total price and a button to checkout -->
 
