--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,45 +9,39 @@
     android:layout_height="match_parent"
     tools:context=".Register">
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:hint="Email"
         android:padding="10dp"
+        android:background="@drawable/textview_border"
         android:id="@+id/email"/>
 
     <EditText
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-
+        android:background="@drawable/textview_border"
         android:layout_marginTop="15dp"
         android:hint="Password"
         android:padding="10dp"
         android:id="@+id/password"/>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        android:layout_marginTop="15sp"
-        android:text="REGISTER"
-        android:padding="10dp"
-        android:id="@+id/register"/>
 
 
-    <!--    <ImageView-->
-    <!--        android:layout_width="wrap_content"-->
-    <!--        android:layout_height="50dp"-->
-    <!--        android:src="@drawable/logo"/>-->
 
-    <!--    <EditText-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="wrap_content"-->
-    <!--        android:background="@drawable/edit_text_background"-->
-    <!--        android:layout_marginTop="15dp"-->
-    <!--        android:hint="Username"-->
-    <!--        android:padding="10dp"-->
-    <!--        android:id="@+id/username"/>-->
+<!--        <ImageView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:src="@drawable/logo"/>-->
+
+        <EditText
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/textview_border"
+            android:layout_marginTop="15dp"
+            android:hint="Username"
+            android:padding="10dp"
+            android:id="@+id/username"/>
 
     <!--    <EditText-->
     <!--        android:layout_width="match_parent"-->
@@ -91,5 +85,13 @@
     <!--        android:text="Already a user? LogIn"-->
     <!--        android:layout_marginTop="15dp"-->
     <!--        android:id="@+id/login_user"/>-->
+    <Button
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15sp"
+        android:text="REGISTER"
+        android:padding="10dp"
+        android:background="@drawable/custom_button"
+        android:id="@+id/register"/>
 
 </LinearLayout>
