--- a/app/src/main/res/layout/activity_review_page.xml
+++ b/app/src/main/res/layout/activity_review_page.xml
@@ -169,7 +169,8 @@
         </LinearLayout>
     </LinearLayout>
 
-    <GridView
+    <ListView
+        android:id="@+id/lvReviewList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
