dialog-later-button

--- a/app/src/main/res/layout/activity_rate_store_dialog.xml
+++ b/app/src/main/res/layout/activity_rate_store_dialog.xml
@@ -63,6 +63,7 @@
                 android:textSize="16sp" />
 
             <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                android:id="@+id/ratingBarRate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
