--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -4,11 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ProductPage">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center_horizontal|center_vertical">
+        <ImageView
+            android:id="@+id/imv_store"
+            android:layout_width="75dp"
+            android:layout_height="wrap_content"
+            tools:srcCompat="@tools:sample/avatars"/>
+        <TextView
+            android:id="@+id/tv_store_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="T'ny Cake, Panna Cotta, Tàu hủ Singapore"
+            android:textSize="@dimen/name_textSize"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:layout_margin="5dp"
+            />
+    </LinearLayout>
+    <TextView
+        android:id="@+id/tv_store_description"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="This is store's description"
+        android:textSize="@dimen/description_textSize"
+        android:textStyle="italic"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        />
+    <TextView
+        android:id="@+id/tv_store_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="  This is store's address"
+        android:textColor="@color/black"
+        android:textSize="@dimen/normal_textSize"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:drawableLeft="@drawable/ic_location"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="   Nhận xét và đánh giá"
+        android:textSize="@dimen/normal_textSize"
+        android:textColor="@color/black"
+        android:drawableLeft="@drawable/ic_rate_star"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Danh sách sản phẩm"
+        android:textSize="@dimen/name_textSize"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="@dimen/df_margin"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
     <GridView
-        android:id="@+id/gridView"
+        android:id="@+id/product_display_gridview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="1"/>
+        android:fitsSystemWindows="true"
+        android:padding="15px" />
 </LinearLayout>
+
+
