--- a/app/src/main/res/layout/activity_product_page.xml
+++ b/app/src/main/res/layout/activity_product_page.xml
@@ -40,6 +40,11 @@
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
         />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_margin="10dp"/>
     <TextView
         android:id="@+id/tv_store_address"
         android:layout_width="match_parent"
@@ -49,9 +54,13 @@
         android:textSize="@dimen/normal_textSize"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/ic_location"
         />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_margin="10dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,14 +70,18 @@
         android:drawableLeft="@drawable/ic_rate_star"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
-        android:layout_marginTop="10dp"
         />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/gray"
+        android:layout_margin="10dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Danh sách sản phẩm"
         android:textSize="@dimen/name_textSize"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginLeft="@dimen/df_margin"
         android:textColor="@color/black"
         android:textStyle="bold"/>
