--- a/app/src/main/res/layout/activity_item_store.xml
+++ b/app/src/main/res/layout/activity_item_store.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="20dp">
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
     <ImageView
         android:id="@+id/imgViewStore"
@@ -15,7 +16,7 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="80dp"
         android:orientation="vertical">
         <TextView
             android:id="@+id/txtName"
@@ -32,9 +33,8 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
-            android:layout_width="248dp"
+            android:layout_width="246dp"
             android:layout_height="59dp"
-            android:layout_marginBottom="144dp"
             android:numStars="5"
             android:rating="0"
             android:stepSize="1"
@@ -43,7 +43,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.38"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"/>
     </LinearLayout>
 
 
