--- a/app/src/main/res/drawable/textview_border.xml
+++ b/app/src/main/res/drawable/textview_border.xml
@@ -7,4 +7,9 @@
     <corners
         android:radius="16dp" />
     <solid android:color="@android:color/white" />
+    <gradient
+        android:type="linear"
+        android:startColor="#a1c4fd "
+        android:endColor="#c2e9fb"
+        android:angle="0" />
 </shape>
