--- a/app/src/main/res/drawable/on_select_border.xml
+++ b/app/src/main/res/drawable/on_select_border.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true">
+    <item android:state_focused="true">
         <shape>
             <stroke
-                android:width="2dp"
+                android:width="1dp"
                 android:color="@color/primary_color"
                 ></stroke>
             <corners
@@ -11,7 +11,7 @@
                 ></corners>
         </shape>
     </item>
-    <item android:state_pressed="false">
+    <item android:state_focused="false">
         <shape>
             <stroke
                 android:width="2dp"
