--- a/app/src/main/res/layout/activity_detail_product.xml
+++ b/app/src/main/res/layout/activity_detail_product.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".DetailProductActivity">
     <ScrollView
         android:layout_width="match_parent"
@@ -16,7 +15,7 @@
             <ImageView
                 android:id="@+id/imv_product"
                 android:layout_width="match_parent"
-                android:layout_height="400dp"
+                android:layout_height="300dp"
                 tools:srcCompat="@tools:sample/avatars">
             </ImageView>
 
@@ -44,6 +43,14 @@
                     android:textColor="@color/primary_color"
                     android:textSize="@dimen/normal_textSize" />
             </LinearLayout>
+            <TextView
+                android:id="@+id/tv_product_description"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Description"
+                android:textColor="@color/gray"
+                android:layout_marginLeft="10dp"
+                android:textSize="@dimen/normal_textSize" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="4dp"
@@ -59,72 +66,59 @@
                 android:background="@drawable/on_select_border"
                 android:drawableLeft="@drawable/ic_note_button"
                 />
-        </LinearLayout>
-    </ScrollView>
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:id="@+id/bottom_nav"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/nav_border">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center_vertical|center_horizontal">
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center_vertical|center_horizontal"
-                android:background="@drawable/normal_border"
-                android:layout_margin="5dp"
-                android:padding="5dp" >
-                <ImageButton
-                    android:id="@+id/btn_minus"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
-                    android:layout_margin="5dp"
-                    android:background="@drawable/minus"
-                    android:textColor="#1CDC1F"
-                    android:contentDescription="minus"
-                    >
-
-                </ImageButton>
-                <TextView
-                    android:id="@+id/tv_quantity"
-                    android:layout_width="35dp"
+                android:gravity="center_vertical|center_horizontal">
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:layoutDirection="rtl"
-                    android:text="0"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp" />
-                <ImageButton
-                    android:id="@+id/btn_plus"
-                    android:layout_width="48dp"
-                    android:layout_margin="5dp"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical|center_horizontal"
+                    android:background="@drawable/normal_border"
+                    android:layout_margin="10dp">
+                    <Button
+                        android:id="@+id/btn_minus"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:layout_margin="10dp"
+                        android:background="@drawable/ic_substract"
+                        android:contentDescription="minus"
+                        >
+
+                    </Button>
+                    <TextView
+                        android:id="@+id/tv_quantity"
+                        android:layout_width="30dp"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:layoutDirection="rtl"
+                        android:text="1"
+                        android:textColor="@android:color/black"
+                        android:textSize="15sp" />
+                    <Button
+                        android:id="@+id/btn_plus"
+                        android:layout_width="24dp"
+                        android:layout_margin="10dp"
+                        android:layout_height="24dp"
+                        android:background="@drawable/ic_add"
+                        android:contentDescription="add"
+                        >
+
+                    </Button>
+                </LinearLayout>
+                <Button
+                    android:id="@+id/btn_addtocart"
+                    android:layout_width="wrap_content"
                     android:layout_height="48dp"
-                    android:background="@drawable/plus"
-                    android:textColor="#1CDC1F"
-                    android:contentDescription="add"
-                    >
-
-                </ImageButton>
+                    android:backgroundTint="@color/primary_color"
+                    android:textSize="@dimen/normal_textSize"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="5dp"
+                    android:text="Add to cart">
+                </Button>
             </LinearLayout>
-            <Button
-                android:id="@+id/btn_addtocart"
-                android:layout_width="wrap_content"
-                android:layout_height="50dp"
-                android:backgroundTint="@color/primary_color"
-                android:textSize="@dimen/name_textSize"
-                android:textColor="@color/white"
-                android:layout_marginLeft="10dp"
-                android:text="Add to cart">
-            </Button>
         </LinearLayout>
-    </com.google.android.material.bottomnavigation.BottomNavigationView>
+    </ScrollView>
 </RelativeLayout>
-
-
-
