--- a/app/src/main/res/layout/activity_item_store.xml
+++ b/app/src/main/res/layout/activity_item_store.xml
@@ -33,17 +33,15 @@
 
         <RatingBar
             android:id="@+id/ratingBar"
-            android:layout_width="246dp"
-            android:layout_height="59dp"
+            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:numStars="5"
             android:rating="0"
-            android:stepSize="1"
             android:scaleX="0.5"
             android:scaleY="0.5"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.38"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:stepSize="1"
+            />
     </LinearLayout>
 
 
