--- a/app/src/main/res/layout/activity_review_page.xml
+++ b/app/src/main/res/layout/activity_review_page.xml
@@ -11,6 +11,32 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginBottom="16dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textColor="#FA275A"
+            android:layout_marginBottom="8dp"
+            android:text="Ratings and Reviews" />
+
+        <TextView
+            android:id="@+id/tvStoreName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:text="Store Name" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="horizontal">
         <LinearLayout
@@ -19,6 +45,7 @@
             android:layout_gravity="center"
             android:orientation="vertical" >
             <TextView
+                android:id="@+id/tvRating"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -26,10 +53,11 @@
                 android:textSize="32sp"
                 android:textColor="#FA275A" />
             <me.zhanghai.android.materialratingbar.MaterialRatingBar
+                android:id="@+id/rbStore"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:isIndicator="false"
+                android:isIndicator="true"
                 android:maxHeight="20dp"
                 android:minHeight="20dp"
                 android:numStars="5"
