--- a/app/src/main/res/drawable/textview_border.xml
+++ b/app/src/main/res/drawable/textview_border.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="2dp"
-        android:color="#FA275A" />
+        android:color="@color/gray" />
     <corners
         android:radius="16dp" />
     <solid android:color="@android:color/white" />
