--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -14,6 +14,15 @@
         android:orientation="vertical"
         android:layout_margin="16dp">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textColor="#FA275A"
+            android:layout_marginBottom="8dp"
+            android:text="Payment" />
+
         <Button
             android:id="@+id/btnDeliveryAddress"
             android:layout_width="match_parent"
