--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -3,70 +3,85 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/textview_border"
+        android:padding="8dp"
         android:layout_margin="16dp">
 
         <ImageView
             android:id="@+id/imageView_cart"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
             android:layout_gravity="center"
             android:layout_margin="8dp"
+            android:src="@drawable/ic_cart"
             android:scaleType="centerCrop" />
 
         <LinearLayout
-            android:layout_width="350dp"
-            android:layout_height="127dp"
+            android:layout_width="300dp"
+            android:layout_height="70dp"
             android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:gravity="start"
             android:orientation="vertical"
-            android:paddingStart="16dp" >
+            android:paddingLeft="16dp" >
 
             <TextView
                 android:id="@+id/textView_productName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
                 android:text="Name"
+                android:layout_marginTop="6dp"
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
 
+            <TextView
+                android:id="@+id/textView_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Price"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:layout_marginTop="6dp"
+                android:textStyle="bold" />
 
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="end"
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="100dp"
                 android:layout_height="34dp"
                 android:background="@drawable/textview_border"
                 android:orientation="horizontal"
-                android:layout_marginLeft="5dp"
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:layout_marginRight="20dp"
                 android:padding="3dp">
 
                 <ImageButton
                     android:id="@+id/btnMinus"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="5dp"
                     android:background="@drawable/ic_minus"
-                    android:contentDescription="Minus"
-                    tools:ignore="TouchTargetSizeCheck">
-
-                </ImageButton>
+                    android:contentDescription="Minus" />
 
                 <TextView
                     android:id="@+id/textView_quantity"
                     android:layout_width="35dp"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginRight="5dp"
+                    android:text="quan"
+                    android:layout_gravity="center"
                     android:gravity="center"
-                    android:text="Quantity"
                     android:textColor="@android:color/black"
                     android:textSize="16sp" />
 
@@ -74,45 +89,19 @@
                     android:id="@+id/btnAdd"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:layout_gravity="center_vertical"
                     android:background="@drawable/ic_add"
-                    android:contentDescription="Add"
-                    tools:ignore="TouchTargetSizeCheck">
-
-                </ImageButton>
-
+                    android:contentDescription="Add" />
 
             </LinearLayout>
-
-
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="100dp"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="27dp"
-                android:layout_marginLeft="15dp"
-                android:text="Price"
-                android:textColor="@android:color/black"
-                android:textSize="18sp"
-                android:textStyle="bold" />
-
             <ImageButton
                 android:id="@+id/btnDelete"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:layout_marginLeft="21dp"
-                android:layout_marginTop="17dp"
+                android:gravity="end"
                 android:background="@drawable/ic_delete"
-                android:contentDescription="Delete"
-                android:padding="10dp">
+                android:contentDescription="Delete" />
 
-            </ImageButton>
+
         </LinearLayout>
 
     </LinearLayout>
