--- a/app/src/main/res/drawable/button_bg.xml
+++ b/app/src/main/res/drawable/button_bg.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <stroke
-        android:width="2dp"
-        android:color="#FA275A" />
+
     <corners
         android:radius="20dp" />
-    <solid android:color="@android:color/white" />
+    <solid android:color="#FA275A" />
 </shape>
