--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -4,16 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="12dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.auth.RegisterPage">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_margin="16dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:src="@drawable/ic_logo" />
+
     <EditText
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:hint="Email"
-        android:padding="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:background="@drawable/textview_border"
         android:id="@+id/email"/>
 
@@ -23,25 +32,23 @@
         android:background="@drawable/textview_border"
         android:layout_marginTop="15dp"
         android:hint="Password"
-        android:padding="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
         android:id="@+id/password"/>
 
-
-
-
-<!--        <ImageView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:src="@drawable/logo"/>-->
-
-        <EditText
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:background="@drawable/textview_border"
-            android:layout_marginTop="15dp"
-            android:hint="Username"
-            android:padding="10dp"
-            android:id="@+id/username"/>
+    <EditText
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/textview_border"
+        android:layout_marginTop="15dp"
+        android:hint="Username"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:id="@+id/username"/>
 
     <!--    <EditText-->
     <!--        android:layout_width="match_parent"-->
@@ -85,13 +92,14 @@
     <!--        android:text="Already a user? LogIn"-->
     <!--        android:layout_marginTop="15dp"-->
     <!--        android:id="@+id/login_user"/>-->
+
     <Button
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
+        android:layout_height="45dp"
         android:layout_marginTop="15sp"
         android:text="REGISTER"
-        android:padding="10dp"
-        android:background="@drawable/custom_button"
+        android:textSize="15dp"
+        android:background="@drawable/button_bg"
         android:id="@+id/register"/>
 
 </LinearLayout>
