--- a/app/src/main/res/layout/store_item.xml
+++ b/app/src/main/res/layout/store_item.xml
@@ -9,15 +9,15 @@
 
     <ImageView
         android:id="@+id/imgViewStore"
-        android:layout_width="100dp"
-        android:layout_height="90dp"
+        android:layout_width="120dp"
+        android:layout_height="115dp"
         android:scaleType="centerCrop"
         android:layout_marginRight="20dp"
         android:background="@drawable/rounded_corner"/>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
         <TextView
             android:id="@+id/txtName"
@@ -29,10 +29,10 @@
         <TextView
             android:id="@+id/txtDescription"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp"
             android:text="Description Name"/>
 
-        <RatingBar
+        <androidx.appcompat.widget.AppCompatRatingBar
             android:id="@+id/ratingBar"
             style="@style/Widget.AppCompat.RatingBar.Indicator"
             android:layout_width="wrap_content"
@@ -42,7 +42,8 @@
             android:scaleX="0.5"
             android:scaleY="0.5"
             android:stepSize="1"
-            android:layout_gravity="right"/>
+            android:layout_gravity="right"
+            android:progressTint="#FA275A"/>
     </LinearLayout>
 
 
