--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,8 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -51,42 +51,49 @@
 
         </LinearLayout>
 
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
+            android:layout_width="370dp"
+            android:layout_height="35dp"
+            android:layout_gravity="center"
+            android:queryHint="Tìm kiếm cửa hàng"
+            android:hint="Tìm kiếm cửa hàng"
+            android:iconifiedByDefault="true"
+            android:background="@drawable/searchview_border"
+            android:layout_marginBottom="10dp"/>
     </LinearLayout>
-    <androidx.appcompat.widget.SearchView
-        android:id="@+id/searchView"
-        android:layout_width="370dp"
-        android:layout_height="35dp"
-        android:layout_gravity="center"
-        android:queryHint="Tìm kiếm cửa hàng"
-        android:hint="Tìm kiếm cửa hàng"
-        android:iconifiedByDefault="true"
-        android:background="@drawable/searchview_border"
-        android:layout_marginBottom="10dp"/>
+
 
 <!--    <include layout="@layout/navigation_bar" />-->
 
-    <androidx.viewpager.widget.ViewPager
-        android:id="@+id/viewPaper"
-        android:layout_width="370dp"
-        android:layout_height="120dp"
-        android:layout_gravity="center"
-        android:background="@drawable/rounded_corner"
-        android:contentDescription="Carousel"
-        android:layout_marginBottom="10dp"/>
-
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hôm nay ăn gì?"
-        android:textSize="18dp"
-        android:textStyle="bold"
-        android:layout_marginBottom="10dp"/>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <GridView
-        android:id="@+id/gridViewStore"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewPaper"
+            android:layout_width="370dp"
+            android:layout_height="120dp"
+            android:layout_gravity="center"
+            android:background="@drawable/rounded_corner"
+            android:contentDescription="Carousel"
+            android:layout_marginBottom="10dp"/>
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Hôm nay ăn gì?"
+            android:textSize="18dp"
+            android:textStyle="bold"
+            android:layout_marginBottom="10dp"/>
+
+        <GridView
+            android:id="@+id/gridViewStore"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:nestedScrollingEnabled="false" />
+    </LinearLayout>
 
 
 </LinearLayout>
